--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.43.6",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
