--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.13",
+    "@react-oauth/google": "^0.9.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -15,9 +16,13 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
+    "google-one-tap": "^1.0.6",
+    "install": "^0.13.0",
+    "npm": "^9.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
+    "react-google-one-tap-login": "^0.1.1",
     "react-hook-form": "^7.43.6",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
