--- a/package.json
+++ b/package.json
@@ -5,22 +5,23 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.13",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.1",
     "@react-oauth/google": "^0.9.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.16",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "axios": "^1.3.4",
     "google-one-tap": "^1.0.6",
     "install": "^0.13.0",
     "npm": "^9.6.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-google-one-tap-login": "^0.1.1",
     "react-hook-form": "^7.43.6",
