--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/google.accounts": "^0.0.7",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.16",
     "@types/react": "^17.0.2",
@@ -19,12 +20,14 @@
     "axios": "^1.3.4",
     "google-one-tap": "^1.0.6",
     "install": "^0.13.0",
+    "jwt-decode": "^3.1.2",
     "npm": "^9.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-google-one-tap-login": "^0.1.1",
     "react-hook-form": "^7.43.6",
+    "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
